# convert-address-rust

./: .gitignore  Cargo.toml  Readme.md  flake.nix  test.xml
.github/workflows/: rust.yml
examples/: enterprise-example1.txt  enterprise-example2.txt  individual-example1.txt  individual-example2.txt  individual-example3.txt
src/: common.rs  from-iso20022.rs  lib.rs  main.rs  to-iso20022.rs
src/models/: address.rs  address_iso_20022.rs  address_nf_z10_01.rs  address_nf_z10_011_enterprise.rs  address_nf_z10_01_enterprise.rs  address_nf_z10_01_individual.rs  mod.rs  validate.rs
src/presenters/: api.rs  cli.rs
src/repositories/: address_repository.rs  database_repository.rs  in_memory_repository.rs  json_repository.rs  mod.rs
tests/: integration_test.rs
