[package]
name = "address"
version = "0.1.0"
edition = "2021"

[[main]]
name = "main"
path = "src/main.rs"


[[bin]]
name = "to-iso20022"
path = "src/to-iso20022.rs"

[[bin]]
name = "from-iso20022"
path = "src/from-iso20022.rs"


[lints.rust]
non_camel_case_types = { level = "allow", priority = 0 }
non_snake_case = { level = "allow", priority = 0 }

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
uuid = { version = "1.13.2", features = ["v4"] }
