[package]
name = "address"
version = "0.1.0"
edition = "2021"

[lints.rust]
non_camel_case_types = { level = "allow", priority = 0 }
non_snake_case = { level = "allow", priority = 0 }

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
uuid = { version = "1.13.2", features = ["serde", "v4"] }
